DocWorks for ecom-payment-settings - 2 changes detected, but 6 issue detected changes: Service ecom-payment-settings message OrderShippingInfo member cost has changed type Service ecom-payment-settings message OrderShippingInfo member region has changed type
issues:
Message Order has an unknown property type ecom-payment-settings.OrderLineItem (payment-settings-spi.js (80))
Message TaxSummary has an unknown property type payment-settings.TaxSummaryAmounts (payment-settings-spi.js (230))
Message AppliedDiscounts has an unknown property type ecom-payment-settings.AppliedDiscountsDiscountRule (payment-settings-spi.js (245))
Message OrderShippingInfo has an unknown property type payment-settings.ShippingLogistics (payment-settings-spi.js (426))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
oneof group appliedDiscount contains non existing property merchantRule

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -1,6 +1,7 @@
 { "name": "ecom-payment-settings",
   "mixes": [],
-  "labels": [],
+  "labels":
+    [ "changed" ],
   "location":
     { "lineno": 1,
       "filename": "payment-settings-spi-index.js" },
@@ -1002,7 +1003,7 @@
               "doc": "Unique code (or ID) of selected shipping option. For example, `usps_std_overnight`.",
               "optional": true },
             { "name": "cost",
-              "type": "payment-settings.ShippingCost",
+              "type": "ecom-payment-settings.ShippingCost",
               "doc": "Shipping costs.",
               "optional": true },
             { "name": "logistics",
@@ -1010,7 +1011,7 @@
               "doc": "Shipping logistics.",
               "optional": true },
             { "name": "region",
-              "type": "payment-settings.ShippingRegion",
+              "type": "ecom-payment-settings.ShippingRegion",
               "doc": "Shipping region.",
               "optional": true },
             { "name": "title",
@@ -1019,7 +1020,8 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels": [] },
+        "labels":
+          [ "changed" ] },
       { "name": "PaymentSettings",
         "locations":
           [ { "lineno": 74,
